// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Background when it's a mobile device has the correct mobile styling 1`] = `
CSSStyleDeclaration {
  "0": "display",
  "1": "height",
  "10": "z-index",
  "11": "overflow",
  "12": "visibility",
  "13": "background",
  "2": "width",
  "3": "margin",
  "4": "padding",
  "5": "position",
  "6": "top",
  "7": "left",
  "8": "justify-content",
  "9": "align-items",
  "_importants": Object {
    "align-items": "",
    "background": "",
    "display": "",
    "height": "",
    "justify-content": "",
    "left": "",
    "margin": "",
    "overflow": "",
    "padding": "",
    "position": "",
    "top": "",
    "visibility": undefined,
    "width": "",
    "z-index": "",
  },
  "_length": 14,
  "_onChange": [Function],
  "_values": Object {
    "align-items": "flex-start",
    "background": "rgba(0, 0, 0, 0)",
    "background-color": "rgba(0, 0, 0, 0)",
    "display": "flex",
    "height": "100%",
    "justify-content": "center",
    "left": "0px",
    "margin": "0px",
    "margin-bottom": "0px",
    "margin-left": "0px",
    "margin-right": "0px",
    "margin-top": "0px",
    "overflow": "hidden",
    "padding": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
    "position": "absolute",
    "top": "0px",
    "visibility": "visible",
    "width": "100vw",
    "z-index": "10000",
  },
}
`;

exports[`Background when it's not a mobile device has the correct non-mobile styling 1`] = `
CSSStyleDeclaration {
  "0": "display",
  "1": "height",
  "10": "z-index",
  "11": "overflow",
  "12": "visibility",
  "13": "background",
  "2": "width",
  "3": "margin",
  "4": "padding",
  "5": "position",
  "6": "top",
  "7": "left",
  "8": "justify-content",
  "9": "align-items",
  "_importants": Object {
    "align-items": "",
    "background": "",
    "display": "",
    "height": "",
    "justify-content": "",
    "left": "",
    "margin": "",
    "overflow": "",
    "padding": "",
    "position": "",
    "top": "",
    "visibility": undefined,
    "width": "",
    "z-index": "",
  },
  "_length": 14,
  "_onChange": [Function],
  "_values": Object {
    "align-items": "flex-start",
    "background": "rgba(255, 255, 255, 0)",
    "background-color": "rgba(255, 255, 255, 0)",
    "display": "flex",
    "height": "100%",
    "justify-content": "center",
    "left": "0px",
    "margin": "0px",
    "margin-bottom": "0px",
    "margin-left": "0px",
    "margin-right": "0px",
    "margin-top": "0px",
    "overflow": "hidden",
    "padding": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
    "position": "absolute",
    "top": "0px",
    "visibility": "visible",
    "width": "100vw",
    "z-index": "10000",
  },
}
`;
